# bovine

./: .gitignore  LICENSE  Pipfile  README.md  all_tests.sh  app.py  bovine_config.toml.example  pyproject.toml  pytest.ini
bovine/: README.md  __init__.py  pyproject.toml  types.py
bovine/activitystreams/: __init__.py  actor_builder.py  outbox_builder.py  test_image_builder.py  test_outbox_builder.py
bovine/activitystreams/activities/: __init__.py  accept_builder.py  create_builder.py  delete_builder.py  follow_builder.py  test_create_builder.py  test_follow_builder.py
bovine/activitystreams/common/: context_builder.py
bovine/activitystreams/objects/: __init__.py  note_builder.py  test_note_builder.py  tombstone_builder.py
bovine/bovine/: __init__.py  test_types.py  types.py
bovine/bovine/activitypub/: activity_factory.py  actor.py  collection_helper.py  collection_iterator.py  object_factory.py
bovine/clients/: __init__.py  consts.py  lookup_account.py  nodeinfo.py  signed_http.py  test_lookup_account.py  test_signed_http.py
bovine/examples/: basic_app.py  hello_auth.py  introduction.ipynb  mastodon_bridge.py  oauth.py  pyproject.toml  repl.py  send_accept.py  send_delete_user.py  send_like.py  send_note.py  send_unfollow.py  sse.py
bovine/processors/: __init__.py  accept_follow.py  dismiss_delete.py  processor_list.py  test_accept_follow.py  test_dismiss_delete.py  verify_inbox.py
bovine/scripts/: generate_heykey.py
bovine/server/: __init__.py  activitypub.py  activitypub_client.py  info.py  rewrite_request.py  wellknown.py
bovine/stores/: __init__.py  in_memory.py
bovine/test/: in_memory_test_app.py
bovine/tests/: test_activitypub_actor.py  test_activitypub_inbox.py  test_activitypub_inbox_sse.py  test_activitypub_outbox.py  test_activitypub_outbox_post.py  test_json_ld_format.py  test_webfinger_to_activitypub.py  test_wellknown_webfinger.py
bovine/user_store/: __init__.py  in_memory.py
bovine/utils/: __init__.py  crypto.py  date.py  http_signature.py  test_crypto.py  test_date.py  test_http_signature.py
bovine/wellknown/: __init__.py
bovine_admin/: admin.py  (+2 more)
bovine_core/: README.md  as.json  pyproject.toml
bovine_core/bovine_core/: types.py
bovine_core/examples/: mastodon_bridge.py  repl.py  send_accept.py  send_delete_user.py  send_like.py  send_note.py  send_unfollow.py  sse.py
bovine_core/tests/: test_json_ld_format.py
bovine_fedi/: README.md  bovine_config.toml  context_cache.sqlite  pyproject.toml  setup.cfg
bovine_fedi/bovine_fedi/: __init__.py  build_store.py  config.py  endpoints.py  models.py
bovine_fedi/scripts/: collect_peers.py  database_cleanup.py  ensure_follow.py  import_rapid_block.py
bovine_fedi/templates/: index.html
bovine_fedi/tests/: test_activitypub_actor.py  test_webfinger_to_activitypub.py  test_wellknown_nodeinfo.py  test_wellknown_webfinger.py
bovine_process/: README.md  pyproject.toml
bovine_process/bovine_process/: __init__.py  add_to_queue.py  process.py  send_item.py  test_undo.py  undo.py
bovine_store/: .gitignore  README.md  context_cache.sqlite  pyproject.toml  store.db
bovine_store/bovine_store/: blueprint.py  collection.py  config.py  jsonld.py  models.py  permissions.py  store.py  test_jsonld.py  test_permissions.py  test_store.py
bovine_store/examples/: basic_app.py  create_table.py
bovine_store/templates/: fallback.html
bovine_store/tests/: app_env.py  test_retrieve.py
bovine_tortoise/: README.md  __init__.py  actions.py  models.py  outbox.py  outbox_blueprint.py  processors.py  pyproject.toml  setup.cfg  test_actions.py  test_database.py  test_inbox.py  test_outbox.py  test_processor.py  types.py  utils.py
bovine_tortoise/bovine_tortoise/: __init__.py  actions.py  inbox.py  models.py  outbox.py  outbox_blueprint.py  test_actions.py  test_database.py  test_inbox.py  test_outbox.py  test_utils.py  utils.py
bovine_tortoise/caches/: public_key.py  test_public_key.py
bovine_tortoise/processors/: __init__.py  inbox.py  outbox.py  test_inbox.py  test_outbox.py
bovine_tortoise/scripts/: collect_peers.py
bovine_tortoise/storage/: __init__.py  test_storage.py
bovine_user/: README.md  pyproject.toml
bovine_user/bovine_user/: config.py  hello_auth.py  manager.py  models.py  server.py  test_manager.py  types.py
bovine_user/examples/: basic_app.py  create_table.py
bovine_user/templates/: create.html
docs/: actor.md  client_to_server_activitypub.md  deployment.md  http_signatures.md  like_activity.md  make_specification.py  pyproject.toml  specification.md  specification_template.md
examples/basic_app/: basic_app.py  pyproject.toml
examples/cow_resisa/: README.md  generate_keys.py  pyproject.toml  resisa.py
examples/local_test_blog/: README.md  pyproject.toml  static
examples/munching_cow/: munching_cow.py  munching_cow_cleanup.py  pyproject.toml
mechanical_bull/: README.md  pyproject.toml  run.py
mechanical_bull/mechanical_bull/: __init__.py
notebooks/: Understanding json-ld libraries.ipynb  instances.ipynb  pyproject.toml  urls
tests/: README.md  context_cache.sqlite  pyproject.toml  test_wellknown.py
tests/clients/: test_clients.py
tests/data/: buffalo_create_note_1.json  mastodon_announce_1.json  mastodon_announce_1_undo.json  mastodon_delete_actor_1.json  mastodon_flow_1_create_note.json  mastodon_flow_1_update_note.json  mastodon_flow_2_create_note.json  mastodon_flow_2_delete_note.json  mastodon_like_1.json  mitra_follow.json  munching_cow_create_note_1.json  peertube_create_video_1.json
tests/processor/: test_verify_inbox_request.py
tests/server/: test_activitypub_actor.py  test_activitypub_inbox.py  test_activitypub_inbox_get.py  test_activitypub_outbox.py  test_activitypub_outbox_post.py  test_webfinger_to_activitypub.py  test_wellknown_nodeinfo.py  test_wellknown_webfinger.py
tests/test_data/: mastodon_announce_1.json  mastodon_follow_1.json  mastodon_like_1.json  mastodon_like_1_undo.json  mastodon_undo_announce_1.json
tests/tests/: test_actor.py  test_nodeinfo.py  test_webfinger.py
tests/utils/: __init__.py  blog_test_env.py
(+434 files in other folders)
