[tool.poetry]
name = "bovine"
version = "0.0.2"
description = "Modular ActivityPub Server"
authors = ["Helge <helge.krueger@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
quart = "*"
cryptography = "*"
aiohttp = "*"
aiodns = "*"
tortoise-orm = "*"
markdown = "*"
rich = "*"
aerich = "^0.7.1"
python-markdown-math = "^0.8"
mypy = "^0.991"
types-markdown = "^3.4.2.2"
types-jsonschema = "^4.17.0.3"
rdflib = "^6.2.0"
python-dateutil = "^2.8.2"
pytest-cov = "^4.0.0"
types-python-dateutil = "^2.8.19.6"
isort = "^5.11.4"
cowsay = "^5.0"
quart-cors = "^0.6.0"

[tool.poetry.group.test.dependencies]
black = "*"
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"
flake8-black = "*"
jsonschema = "*"



[tool.poetry.group.dev.dependencies]
pytest-env = "^0.8.1"

[tool.aerich]
tortoise_orm = "bovine_blog.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env = [
    "ACCESS_TOKEN=test_token"
]
asyncio_mode="auto"
log_cli= 1
