[tool.poetry]
name = "bovine-core"
version = "0.0.3"
description = "Core functionality of bovine needed to build client to server applications"
authors = ["Helge <helge.krueger@gmail.com>"]
license = "../LICENSE"
readme = "../README.md"
packages = [{include = "bovine_core"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
cryptography = "^39.0.0"
python-dateutil = "^2.8.2"

[tool.poetry.group.test.dependencies]
black = "*"
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"
flake8-black = "*"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"
mypy = "^0.991"
types-python-dateutil = "^2.8.19.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"
log_cli= 1
