[tool.poetry]
name = "bovine-process"
version = "0.0.1"
description = "Processing of Side Effects of ActivityPub Activities for an ActivityPub Server"
authors = ["Helge <helge.krueger@gmail.com>"]
readme = "README.md"
packages = [{include = "bovine_process"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
bovine = {path = "../bovine", develop = true}
bovine-store = {path = "../bovine_store", develop = true}


[tool.poetry.group.test.dependencies]
flake8 = "^6.0.0"
black = "^23.1.0"
pytest = "^7.2.2"
flake8-black = "^0.3.6"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.pytest.ini_options]
asyncio_mode="auto"
log_cli= 1
