[tool.poetry]
name = "bovine-store"
version = "0.1.0-alpha"
description = "Store for ActivityPub activities and objects"
authors = ["Helge <helge.krueger@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bovine_store"}]

[tool.poetry.dependencies]
python = "^3.10"
tortoise-orm = "^0.19.3"
pyld = {git = "https://github.com/HelgeKrueger/pyld.git"}
aiohttp = "^3.8.3"
requests = "^2.28.2"
requests-cache = "^0.9.8"
quart = "^0.18.3"
bovine = {path = "../bovine", develop = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
black = "^23.1.0"
isort = "^5.12.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"
log_cli= 1
log_cli_level="info"