[tool.poetry]
name = "bovine-tortoise"
version = "0.0.4"
description = ""
authors = ["Helge <helge.krueger@gmail.com>"]
readme = "README.md"
packages = [{include = "bovine_tortoise"}]

[tool.poetry.dependencies]
python = "^3.10"
tortoise-orm = "^0.19.3"
bovine = {path = "../bovine", develop=true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
isort = "^5.12.0"
black = "^23.1.0"
mypy = "^0.991"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_mode="auto"
log_cli= 1
