[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Helge <helge.krueger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mdformat-gfm = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
