[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Helge <helge.krueger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
rdflib = "^6.2.0"
requests = "^2.28.2"
aiohttp = "^3.8.3"
bovine = {path = "../bovine", develop = true}
pyld = {git = "https://github.com/HelgeKrueger/pyld.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
