[tool.poetry]
name = "tests"
version = "0.0.1"
description = ""
authors = ["Helge <helge.krueger@gmail.com>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.10"
bovine = {path = "../bovine", develop = true}
bovine-fedi = {path = "../bovine_fedi", develop = true}
bovine-store = {path = "../bovine_store", develop = true}
bovine-user = {path = "../bovine_user", develop = true}
bovine-process = {path = "../bovine_process", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"
isort = "^5.12.0"
black = "^23.1.0"
jsonschema = "^4.17.3"



[tool.poetry.group.test.dependencies]
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
asyncio_mode="auto"
log_cli= 1
log_cli_level="info"


