[tool.poetry]
name = "cow-resisa"
version = "0.1.0"
description = "A RSS to ActivityPub bridge"
authors = ["Helge <helge.krueger@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cow_resisa"}]

[tool.poetry.dependencies]
python = "^3.11"
bovine_core = {path = "../../bovine_core"}
feedparser = "^6.0.10"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-black = "^0.3.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
