[tool.poetry]
name = "local-test-blog"
version = "0.1.0"
description = ""
authors = ["Helge <helge.krueger@gmail.com>"]
readme = "README.md"
packages = [{include = "local_test_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
bovine-blog = {path = "../../bovine_blog"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
