[tool.poetry]
name = "local-test-blog"
version = "0.1.0"
description = ""
authors = ["Helge <helge.krueger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bovine-blog = {path = "../../bovine_blog", develop=true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
